# blockwise_reader

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: tests.rs
